# TRACS

./: CMakeLists.txt  README.md
docs/: GUIdelines.TRACS  TRACS-Manual.tex
src/: CMakeLists.txt  CMakeLists.txt~  Carrier.cpp  Carrier.h  CarrierCollection.cpp  CarrierCollection.h  CarrierMobility.cpp  CarrierMobility.h  CarrierTransport.cpp  CarrierTransport.h  Config.TRACS  Gradient.h  Gradient.ufl  H1DConvolution.C  InterfaceTest.cpp  Poisson.h  Poisson.ufl  SMSDSubDomains.cpp  SMSDSubDomains.h  SMSDetector.cpp  SMSDetector.cppNeff  SMSDetector.h  SMSDetector.hNeff  Source.h  TRACSInterface.cpp  TRACSInterface.h  global.c  global.cpp  global.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  main_gui.cpp  utilities.cpp  utilities.h
src/files2move2bin/: Centered_100ps_TransferFunction_Cividec_06052014.root  Config.TRACS  etct.carriers  etct0.carriers  etct150.carriers  etct300.carriers  etct_old.carriers  red_top_100_tct.carriers
test/: CMakeLists.txt
